--- a/catalog.html
+++ b/catalog.html
@@ -42,17 +42,17 @@
                         <img class="comparison" src="images/basket.svg" alt="Показывает значок корзины." width="16" height="14">
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Каталог товаров</a>
+                        <a class="navigation-link-2" href="#">Каталог товаров</a>
                         <img src="images/plus.svg" alt="Показывает Каталог." width="16" height="16">
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Доставка</a>
+                        <a class="navigation-link-2" href="#">Доставка</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Гарантия</a>
+                        <a class="navigation-link-2" href="#">Гарантия</a>
                      </li>
                      <li>
-                        <a class="navigation-link" href="#">Контакты</a>
+                        <a class="navigation-link-2" href="#">Контакты</a>
                      </li>
                   </ul>
                </nav>
