--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
          <h2 class="visually-hidden">Преимущества.</h2>
          <ul class="adventages">
             <li>
-               <h3>800 м</h3>
-               <p>Дальность полета</p>
+               <h3 class="range">800 м</h3>
+               <p class="discription-range">Дальность полета</p>
             </li>
             <li>
-               <h3>50 м</h3>
-               <p>Радиус поражения</p>
+               <h3 class="range">50 м</h3>
+               <p class="discription-range">Радиус поражения</p>
             </li>
          </ul>
          <section class="catalog" >
@@ -114,46 +114,47 @@
             <h2 class="visually-hidden">Перечень услуг.</h2>
             <ul class="service-list">
                <li class="service-item">
-                  <b class="delivety">Доставка</b>
-                  <h1 class="delivery-title">Доставка</h1>
-                  <p class="delivery-discription">Мы с удовольствием доставим ваш товар прямо
-                     к вашему подъезду совершенно бесплатно! Ведь
-                     мы неплохо заработаем, поднимая его на ваш этаж.
-                  </p>
-                  <img class="delivery-image" src="images/man-delivery.svg" alt="" width="136" height="164">
+                  <a class="delivery" href="#">Доставка</a>
                </li>
                <li class="service-item">
-                  <b class="garanty">Гарантия</b>
+                  <a class="garanty" href="#">Гарантия</a>
                </li>
                <li class="service-item">
-                  <b class="credit">Кредит</b>
+                  <a class="credit" href="#">Кредит</a>
                </li>
             </ul>
+            <h1 class="delivery-title">Доставка</h1>
+            <p class="delivery-discription">Мы с удовольствием доставим ваш товар прямо
+               к вашему подъезду совершенно бесплатно! Ведь
+               мы неплохо заработаем, поднимая его на ваш этаж.
+            </p>
+            <img class="delivery-image" src="images/man-delivery.svg" alt="" width="136" height="164">
          </section>
-         <section class="delivery">
+         <section class="our-delivery">
             <img class="car-delivery" src="images/car-delivery.svg" alt="">
             <b class="rare-item">Доставим редкий товар под заказ</b>
             <img class="info" src="" alt="Значок информации">
          </section>
          <section class="info-about-us">
             <h2 class="about-us">О нас</h2>
-            <p>Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
-            <p>Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
+            <p class="about-us-discription">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в каждом из нас.</p>
+            <p class="about-us-discription">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
             <ul class="delivery-service">
-               <li>Меловые линии</li>
-               <li>СДИК</li>
-               <li>ТоксБерри</li>
+               <li class="delivery-company">Меловые линии</li>
+               <li class="delivery-company">СДИК</li>
+               <li class="delivery-company">ТоксБерри</li>
             </ul>
             <a class="more-about-us" href="#">Подробнее о нас</a>
          </section>
          <section class="contacts">
             <h2 class="our-contacts">Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки.</p>
+            <p class="our-contact-discription">Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки.</p>
             <h2 class="contact-online-store">Интернет-магазин «Девайс»</h2>
             <p class="contact-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
                <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </p>
-            <p class="work-time">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+            <h2 class="work-time">Время работы</h2>
+            <p class="work-time-discription">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
             <a class="more-about-us" href="#">Напишите нам</a>
          </section>
          <section class="newsletter-email">
@@ -187,9 +188,9 @@
                <a class="navigation-footer-list" href="#">Контакты</a>
             </li>
          </ul>
-         <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+         <a class="contact-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
          <section class="footer-social">
-            <h2 class="vissualy-hidden">Социальальные сети.</h2>
+            <h2 class="vissualy-hidden">Социальные сети.</h2>
             <ul class="social-list">
                <li class="social-item">
                   <a class="button" href="#">
