end main page style

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <h2 class="our-contacts">Контакты</h2>
             <p class="our-contact-discription">Вы можете забрать товар сами, заехав в наш офис.<br>Заодно сможете проверить работоспособность покупки.</p>
             <h2 class="contact-online-store">Интернет-магазин «Девайс»</h2>
-            <p class="contact-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
-               <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            <p class="contact-adress-main">Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
+               <a class="contact-phone-main" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </p>
             <h2 class="work-time">Время работы</h2>
             <p class="work-time-discription">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
@@ -176,7 +176,7 @@
       <footer class="page-footer">
          <h2 class="visually-hidden">Device.</h2>
          <img class="logo" src="images/logo-footer.svg" alt="Интернет-магазин Девайс" width="145" height="36">
-         <p class="contact-adress">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
+         <p class="contact-adress-footer">Санкт-Петербург, набережная<br>реки Карповки, 5, литера П.
          <ul class="navigation-footer">
             <li>
                <a class="navigation-footer-list" href="#">Доставка</a>
@@ -188,26 +188,26 @@
                <a class="navigation-footer-list" href="#">Контакты</a>
             </li>
          </ul>
-         <a class="contact-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+         <a class="contact-phone-footer" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
          <section class="footer-social">
             <h2 class="vissualy-hidden">Социальные сети.</h2>
             <ul class="social-list">
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Telegram.</span>
-                  <img src="images/icon-telegram.svg" alt="Значок Telegram." width="13.34" height="11.19">
+                  <img src="images/icon-telegram.svg" alt="Показывает значок Telegram." width="13.34" height="11.19">
                   </a>
 
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Youtube.</span>
-                  <img src="images/icon-youtube.svg" alt="Значок Youtube." width="16" height="10.67">
+                  <img src="images/icon-youtube.svg" alt="Показывает значок Youtube." width="16" height="10.67">
                   </a>
 
                <li class="social-item">
                   <a class="button" href="#">
                   <span class="visually-hidden">Twitter.</span>
-                  <img src="images/icon-twitter.svg" alt="Значок twitter." width="15" height="14.06">
+                  <img src="images/icon-twitter.svg" alt="Показывает значок twitter." width="15" height="14.06">
                   </a>
 
                </li>
