--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                </li>
                <li>
                   <a class="navigation-link" href="#">Войти</a>
-                    <img class="person-area" src="images/person-area.svg" alt="Показывает иконку Личного кабинета." width="13" height="12">
+                    <img class="person-area" src="" alt="" width="13" height="12">
                </li>
                <li>
                   <a class="navigation-link" href="#">Сравнить</a>
@@ -31,7 +31,7 @@
                </li>
                <li>
                   <a class="navigation-link" href="#">Корзина</a>
-                  <img class="comparison" src="images/basket.svg" alt="Показывает значок корзины." width="16" height="14">
+                  <img class="basket-header" src="" alt="Показывает значок корзины." width="16" height="14">
                </li>
                <li>
                   <a class="navigation-link-2" href="catalog.html">Каталог товаров</a>
@@ -128,7 +128,7 @@
                к вашему подъезду совершенно бесплатно! Ведь
                мы неплохо заработаем, поднимая его на ваш этаж.
             </p>
-            <img class="delivery-image" src="images/man-delivery.svg" alt="" width="136" height="164">
+            <img class="delivery-image" src="" alt="" width="136" height="164">
          </section>
          <section class="our-delivery">
             <img class="car-delivery" src="images/car-delivery.svg" alt="">
